--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^16.2.0",
     "@google-cloud/language": "^6.3.0",
     "@google/generative-ai": "^0.8.0",
+    "chart.js": "^3.0.0",
+    "highcharts": "^11.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -28,6 +30,7 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
